GNOME Bugzilla – Bug 764274
[HEVC][decode] No valid frames decoded before end of stream.
Last modified: 2016-04-29 08:40:57 UTC
1. Testing Steps: ======================================================================== gst-launch-1.0 -q filesrc location=/media/HEVC/JVT10.0/PPS_A_qualcomm_7.bin ! h265parse ! vaapidecode ! checksumsink2 frame-checksum=FALSE file-checksum=TRUE | tail -1 >> file_checksum_vaapi.txt 2. fail cases: PPS_A_qualcomm_7.bin Slist_B_Sony_8.bin Slist_D_Sony_9.bin 3.Log: ======================================================================== libva info: VA-API version 0.39.0 libva info: va_getDriverName() returns 0 libva info: Trying to open /opt/X11R7/lib/dri/i965_drv_video.so libva info: Found init function __vaDriverInit_0_39 libva info: va_openDriver() returns 0 ERROR: from element /GstPipeline:pipeline0/GstVaapiDecode:vaapidecode0: No valid frames decoded before end of stream Additional debug info: gstvideodecoder.c(1265): gst_video_decoder_sink_event_default (): /GstPipeline:pipeline0/GstVaapiDecode:vaapidecode0: no valid frames found ERROR: pipeline doesn't want to preroll. 4. Testing Env: ======================================================================== gst_plugins_vaapi10: (master)b044d4acd8e8125bd359a120efb9280e632011d5 libva: (master)2339d10b9a39ba4f7173053b9eab8d6a151717a5 Libva_intel_driver: (master)759e44d4cbe78cf12d287799cee5ff519080052d 5. Frequency of Occurence: ======================================================================== 100% 6. Regression info: All cases pass with gst_plugins_vaapi10:7a1a11e7fb534444b0f1a619f2dec0151b3be3f1(1.7.90)
Aha, this is a regression introduced by the commit: commit a486942ba2d44ba2f60fec25175c681786021b48 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Fri Mar 11 17:44:07 2016 +0200 decoder: h265: Fix offset calculation in codec_data parsing https://bugzilla.gnome.org/show_bug.cgi?id=762922 Thanks for reporting it, I will have a look.
commit c009d29c008c36156dc7f22b91cb491216d95822 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed Mar 30 14:37:21 2016 +0300 decoder: h265: Fix offset calculation when there is more than one vps/sps/pps present in codec_data The array_completeness, reserved bit and num_nal_units fields in HEVCDecoderConfigurationRecord will be present for each VPS/SPS/PPS array list, but not for each occurance of similar headers. https://bugzilla.gnome.org/show_bug.cgi?id=764274 Should be fixed now, Please test with the git master.
Closing, feel free to reopen if issue persists.